# mermaidman

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/mermaidman-core/: Cargo.toml
crates/mermaidman-core/src/: error.rs  lib.rs  types.rs
crates/mermaidman-core/src/ops/: event.rs  mod.rs
crates/mermaidman-core/src/parse/: directives.rs  mod.rs  topology.rs
crates/mermaidman-core/src/reconcile/: engine.rs  mod.rs
crates/mermaidman-core/src/store/: graph.rs  mod.rs
crates/mermaidman-core/src/write/: canonical.rs  mermaid.rs  mod.rs
crates/mermaidman-wasm/: Cargo.toml
crates/mermaidman-wasm/src/: lib.rs
docs/: ai-ux-2026.md  nested-diagrams.md  tauri-bindings.md
docs/issues/: R0-01-directive-schema-versioning-and-canonical-json-ordering.md  R0-02-node-kind-registry-for-diagram-media-oembed-and-code.md  R0-03-rust-wasm-parser-support-for-nested-diagram-payloads.md  R0-04-ai-directive-model-for-provenance.md  R0-05-directive-index-cache-for-uid-lookup.md  R1-01-nested-diagram-editor-opens-on-double-click.md  R1-02-breadcrumbs-and-back-action-for-nested-diagrams.md  R1-03-parent-node-live-thumbnail-preview.md  R1-04-code-node-editor-and-renderer.md  R1-05-ai-actions-for-selection-summarize-refactor-explain.md  R2-01-home-explorer-with-recent-starred-and-shared-filters.md  R2-02-search-by-title-tag-or-content-snippet.md  R2-03-open-diagrams-in-window-or-tab-based-on-preference.md  R2-04-window-focus-and-tab-stacks.md  R2-05-save-and-restore-named-views.md  R2-06-session-persistence-for-last-open-workspace.md  R3-01-image-node-support-with-caption-and-fit-mode.md  R3-02-video-node-support-with-poster-and-playback.md  R3-03-audio-node-support-with-waveform-and-duration.md  R3-04-oembed-node-support-with-fetch-cache-and-sanitize.md  R3-05-semantic-zoom-tiers-for-nodes.md  R3-06-concept-gravity-and-magnetic-connectors.md  R4-01-event-log-for-uid-first-operations.md  R4-02-crdt-ready-merge-strategy.md  R4-03-doc-as-graph-import-with-ai-and-fallback-heuristics.md  R4-04-graph-as-doc-export.md  R4-05-trial-nudge-ux-and-analytics.md  README.md
frontend/: .gitignore  README.md  build_log.txt  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/scripts/: dev.js
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: MermaidEditor.tsx  MermaidNode.tsx  ProjectSidebar.tsx
frontend/src/hooks/: mermaidman_engine.js  useMermaidEngine.ts
frontend/src/rust-engine/: Cargo.toml  build_log.txt  frontend
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  state.rs
src-tauri/src/commands/: document.rs  mod.rs  reconcile.rs  search.rs
(+100 files in other folders)
