[workspace]
resolver = "2"
members = [
    "crates/mermaidman-core",
    "crates/mermaidman-wasm",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mermaidman Team"]
license = "MIT"

[workspace.dependencies]
# Core deps shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
