[package]
name = "mermaidman"
version = "0.1.0"
edition = "2021"
description = "Mermaidman desktop application"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mermaidman-core = { path = "../crates/mermaidman-core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Type-safe bindings
specta = { version = "=2.0.0-rc.20" }
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Platform dirs
dirs = "5"
