[package]
name = "mermaidman-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for Mermaidman core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mermaidman-core = { path = "../mermaidman-core" }

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

serde.workspace = true
serde_json.workspace = true
